webconfig and helperBo

--- a/HealthCareAPI/Web.config
+++ b/HealthCareAPI/Web.config
@@ -9,6 +9,8 @@
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+    <add key ="HealthCareDb" value="mongodb://longnv:longnv@35.240.200.26:27017/?authSource=admin"/>
+    <add key ="DbName" value="HealthCareDb"/>
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.5" />
